fix: horizontal scroll for past events and photo placeholders for members

--- a/src/index.css
+++ b/src/index.css
@@ -125,14 +125,14 @@ a {
 }
 
 /* Utility: hide scrollbar but keep scroll functionality */
-.hide-scrollbar {
+.hide-scrollbar, .scrollbar-hide {
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
 }
 
-.hide-scrollbar::-webkit-scrollbar {
+.hide-scrollbar::-webkit-scrollbar, .scrollbar-hide::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera */
 }
